2002-11-12  Daniel Morgan <danmorg@sc.rr.com>

	* doc/oledb
	* doc/odbc
	* doc/mysql
	* doc/sqlite
	* doc/sqlclient
	* doc/tdsclient
	* doc/sybase
	* doc/firebird: added web pages
	for each specific data provider
	
	* doc/ado-net
	* doc/postgresql: updated web page
	with current status
	
	* doc/web/commands
	* doc/web/makefile: updated to include
	new web pages

2002-11-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* autogen.sh: make it work when MONO_PATH is set and it has more than
	one directory or ends in ":". Also check that the directory added to
	ACLOCAL_FLAGS and PATH exist (aclocal fails if they don't).

2002-10-22  Miguel de Icaza  <miguel@ximian.com>

	* configure.in: Also allow the miss-spelled bohem.

2002-10-18  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net
	* doc/postgresql
	* doc/tds-providers: cleaned up the web pages
	
	* doc/web/commands: postgresql.html page was mistyped

2002-10-18  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated status of
	the ADO.NET functionality and providers
	and added link to tds-providers.html

	* doc/tds-providers: added file to
	describe the design	and status of 
	the SqlClient, SybaseClient, and TdsClient
	ADO.NET providers.

	* doc/web/makefile
	* doc/web/command: added new web page 
	tds-providers.html to build of 	www.go-mono.com web site
	
2002-10-17  Daniel Morgan <danmorg@sc.rr.com>

	* doc/web/makefile
	* doc/web/commands:	web page 
	postgresql needed to be added

2002-10-13  Mark Crichton <crichton@gimp.org>

	* doc/index: Even more spelling errors fixed.

2002-10-13  Daniel Morgan <danmorg@sc.rr.com>

	* doc/adonet: updated status of all providers, added links, 
	  and added information
	  about the Mono.Data.SqliteClient provider that 
	  Vladimir Vukicevic contributed. Added Brian Ritchie's 
	  and Vladimir Vukicevic's email addresses as
	  people to contact about ADO.NET in Mono.  
	  Added information about SQL#, configuration tools, 
	  and an ADO.NET Multiplexor, etc...  
